# meeting-management

./: .gitignore  README.ko.md  README.md  pyproject.toml  setup.py
.claude/: settings.json
.claude/agents/: meeting-recorder.md
.claude/hooks/: README.md  generate-meeting-summary.py  hooks.json  record-message.py  team-create-add-recorder.py  test_hooks.py
.claude/rules/: meeting-auto-recorder.md
.claude/skills/: meeting-record.md
tests/: test_integration.py
